[tool.poetry]
name = "PyFileDialogue"
version = "0.0.5"
description = "A small collection of quality-of-life methods using Python tkinter to interface with the windows file explorer."
authors = ["Bela Vogler <bela.vogler@uni-jena.de>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
